test/libsolidity/syntaxTests/using/using_lhs_asterisk.sol
using * for uint;
// ----
// ParserError 2314: (6-7): Expected identifier but got '*'
